--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,3 +19,16 @@ jobs:
           tf_actions_subcommand: "init"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  terraformvalidate:
+    name: "Terraform Validate"
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Checkout"
+        uses: actions/checkout@master
+      - name: "Terraform Validate"
+        uses: hashicorp/terraform-github-actions@master
+        with:
+          tf_actions_version: 1.0.5
+          tf_actions_subcommand: "validate"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
