--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,28 +7,32 @@ on:
 
 jobs:
   terraform:
-    name: "Terraform init"
+    name: "Terraform Workflow"
     runs-on: ubuntu-latest
     steps:
       - name: "Checkout"
         uses: actions/checkout@master
-      - name: "Terraform Initialization"
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_version: 1.0.5
-          tf_actions_subcommand: "init"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  terraformvalidate:
-    name: "Terraform Validate"
-    runs-on: ubuntu-latest
-    steps:
-      - name: "Checkout"
-        uses: actions/checkout@master
+
+      - name: "Terraform Setup"
+        uses: hashicorp/setup-terraform@master
+
+      - name: "Terraform Init"
+        id: init
+        run: terraform init
+
+      - name: "Terraform Format"
+        id: fmt
+        run: terraform fmt
+
       - name: "Terraform Validate"
-        uses: hashicorp/terraform-github-actions@master
-        with:
-          tf_actions_version: 1.0.5
-          tf_actions_subcommand: "validate"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        id: validate
+        run: terraform validate
+
+      - name: "Terraform plan"
+        id: plan
+        run: terraform plan
+
+      - name: "Terraform apply"
+        if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+        run: terraform apply
+        
