--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "Checkout"
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
 
       - name: "Terraform Setup"
-        uses: hashicorp/setup-terraform@master
+        uses: hashicorp/setup-terraform@v1
 
       - name: "Terraform Init"
         id: init
