continue on error added

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -38,6 +38,7 @@ jobs:
       - name: "Terraform plan"
         id: plan
         run: terraform plan -var="cluster_name=ecs_cluster"
+        continue-on-error: true
 
       - name: "Terraform apply"
         if: github.ref == 'refs/heads/master' && github.event_name == 'push'
