terraform apply auto approve

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -41,5 +41,5 @@ jobs:
 
       - name: "Terraform apply"
         if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-        run: terraform apply
+        run: terraform apply -auto-approve
         
