--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -37,9 +37,8 @@ jobs:
 
       - name: "Terraform plan"
         id: plan
-        run: terraform plan
+        run: terraform plan -no-color -var="cluster_name=newec2"
 
       - name: "Terraform apply"
         if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-        run: terraform apply -auto-approve
-        
+        run: terraform apply -auto-approve        
