--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -37,6 +37,7 @@ jobs:
 
       - name: "Terraform plan"
         id: plan
+        if: github.event_name == 'pull_request'
         run: terraform plan
 
       - name: "Terraform apply"
